[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/character_select.gd" type="Script" id=1]

[node name="character_select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="player1" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0

[node name="characterList1" type="ItemList" parent="player1"]
margin_right = 40.0

[node name="player2" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0

[node name="characterList2" type="ItemList" parent="player2"]
margin_right = 40.0
